fix: card alignment

--- a/ui/src/test-progress/test-progress.scss
+++ b/ui/src/test-progress/test-progress.scss
@@ -48,7 +48,7 @@
 
     &.horizontal {
         flex-direction: row;
-        align-items: flex-start;
+        align-items: center;
         justify-content: space-between;
         gap: 16px;
         padding-left: 40px;
@@ -114,8 +114,8 @@
     }
 
     .card-icon {
-        width: 35px;
-        height: 35px;
+        width: 40px;
+        height: 36px;
         margin-bottom: 16px;
         margin-top: 0;
 
